[package]
name = "hyperlink"
version = "0.1.20"
authors = ["Markus Unterwaditzer <markus-honeypot@unterwaditzer.net>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.40"
rayon = "1.5.1"
pulldown-cmark = "0.8.0"
blake3 = "1.0.0"

html5gum = "0.3.0"
jwalk = "0.6.0"
patricia_tree = "0.3.1"
bumpalo = { version = "3.8.0", features = ["collections"] }
percent-encoding = "2.1.0"
clap = { version = "3.0.4", features = ["std", "derive"], default_features = false }

[dev-dependencies]
assert_cmd = "2.0.2"
assert_fs = "1.0.2"
predicates = "1.0.8"
pretty_assertions = "1.0.0"
