[package]
name = "hyperlink"
version = "0.1.40"
authors = [
    "Markus Unterwaditzer <markus-honeypot@unterwaditzer.net>",
    # contributed dump-external-links command
    "Michael Clayton <mclayton@redhat.com>"
]

description = "Very fast link checker for CI."
homepage = "https://github.com/untitaker/hyperlink"
documentation = "https://github.com/untitaker/hyperlink"
repository = "https://github.com/untitaker/hyperlink"
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.40"
rayon = "1.5.1"
pulldown-cmark = "0.12.2"
blake3 = "1.0.0"

html5gum = "0.6.0"
jwalk = "0.8.1"
bumpalo = { version = "3.11.1", features = ["collections"] }
percent-encoding = "2.1.0"
clap = { version = "4.5.20", features = ["std", "derive", "help", "usage", "error-context", "wrap_help"], default-features = false }
num_cpus = "1.15.0"

[dev-dependencies]
assert_cmd = "2.0.2"
assert_fs = "1.0.2"
predicates = "3.1.2"
pretty_assertions = "1.0.0"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
