[package]
name = "hyperlink"
version = "0.2.0"
authors = [
    "Markus Unterwaditzer <markus-honeypot@unterwaditzer.net>",
    # contributed dump-external-links command
    "Michael Clayton <mclayton@redhat.com>"
]

description = "Very fast link checker for CI."
homepage = "https://github.com/untitaker/hyperlink"
documentation = "https://github.com/untitaker/hyperlink"
repository = "https://github.com/untitaker/hyperlink"
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.40"
rayon = "1.5.1"
pulldown-cmark = "0.12.2"
blake3 = "1.0.0"

html5gum = "0.8.0"
jwalk = "0.8.1"
bumpalo = { version = "3.11.1", features = ["collections"] }
percent-encoding = "2.1.0"
num_cpus = "1.15.0"
bpaf = { version = "0.9.16", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.1.1"
assert_fs = "1.0.2"
insta = { version = "1.42.1", features = ["filters"] }
insta-cmd = "0.6.0"
predicates = "3.1.2"
pretty_assertions = "1.0.0"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
