[package]
name = "html-bench"
version = "0.1.0"
authors = ["Markus Unterwaditzer <markus-honeypot@unterwaditzer.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"
rand = { version = "0.7.3", features = ["small_rng"] }
anyhow = "1.0.33"
